Update before migrate

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <h3 class="masthead-brand"><img src="css/favicon/favicon-32x32.png" />Nik's WebXR Stuff</h3>
       <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link active" href="#">Course</a>
+        <a class="nav-link" href="https://github.com/NikLever/Learn-WebXR">GitHub</a>
         <a class="nav-link" href="https://github.com/NikLever/CanvasUI">CanvasUI</a>
         <a class="nav-link" href="https://threejs.org">ThreeJS</a>
       </nav>
